cmake_minimum_required(VERSION 3.12)
project(proj_rt_files)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(proj_rt_files
        00.png
        00.txt
        01.png
        01.txt
        02.png
        02.txt
        03.png
        03.txt
        04.png
        04.txt
        05.png
        05.txt
        06.png
        06.txt
        07.png
        07.txt
        08.png
        08.txt
        09.png
        09.txt
        10.png
        10.txt
        11.png
        11.txt
        12.png
        12.txt
        13.png
        13.txt
        14.png
        14.txt
        15.png
        15.txt
        16.png
        16.txt
        17.png
        17.txt
        18.png
        18.txt
        19.png
        19.txt
        20.png
        20.txt
        21.png
        21.txt
        22.png
        22.txt
        23.png
        23.txt
        24.png
        24.txt
        25.png
        25.txt
        26.png
        26.txt
        27.png
        27.txt
        28.png
        28.txt
        29.png
        29.txt
        bounding_box.h
        box.cpp
        box.h
        bunny.obj
        camera.cpp
        camera.h
        CMakeLists.txt
        cow.obj
        direction_light.h
        dump_png.cpp
        flat_shader.cpp
        flat_shader.h
        grading-scheme.txt
        grading-script.py
        hedron.obj
        hierarchy.cpp
        hierarchy.h
        light.h
        main.cpp
        mesh.cpp
        mesh.h
        misc.h
        object.h
        parse.cpp
        phong_shader.cpp
        phong_shader.h
        plane.cpp
        plane.h
        point_light.h
        ray.h
        reflective_shader.cpp
        reflective_shader.h
        render_world.cpp
        render_world.h
        SConstruct
        shader.h
        sphere.cpp
        sphere.h
        sphere.obj
        spot_light.h
        tri.obj
        vec.h)
